Moved to secure token handling
Using http only cookie for refresh token and access token is retrieved each time from backend